--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<title>Random Number Generator</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript" src="/js/script.js"></script>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
