--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,8 @@
 	<title>Random Number Generator</title>
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 	<script type="text/javascript" src="cordova.js"></script>
-	<script type="text/javascript" src="/js/script.js"></script>
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<script type="text/javascript" src="js/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body onclick="generate()">
 	<div id="container">
